--- a/Bamboo-files/conns.yaml
+++ b/Bamboo-files/conns.yaml
@@ -53,3 +53,7 @@ uspc-data:
 ussenate-data:
   driver: bamboo_lib.connectors.drivers.http.HttpDriver
   uri: https://dataverse.harvard.edu/api/access/datafile/:persistentId?persistentId=doi:10.7910/DVN/PEJ5QU/XXQCIK
+  
+ush-data:
+  driver: bamboo_lib.connectors.drivers.http.HttpDriver
+  uri: https://dataverse.harvard.edu/api/access/datafile/:persistentId?persistentId=doi:10.7910/DVN/IG0UN2/8KAB8V
